fixed paragraph spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,8 @@ h1, h2, h3, h4 {
   text-decoration-color: var(--bs-cyan);
   text-decoration-skip-ink: none;
   text-decoration-thickness: 4px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 p, ul, li, h5, h6, table {
